--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <h1>Contacts</h1>
 
   <!-- Sign-Up-Credentials -->
-
   <div class="sign-up-container">
     <form id="sign-up-form">
       <input name="credentials[email]" class="form-control" type="email" placeholder="email">
@@ -26,34 +25,37 @@
       <input name="credentials[password_confirmation]" class="form-control" type="password" placeholder="password confirmation">
       <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-Up">
     </form>
+  </div>
 
-    <!--Alert-containers-->
-    <!--Sign-up-alert-success-message-->
+
+    <!--Sign-Up-Alert-Success-Message-->
     <div id="sign-up-messages">
       <div class="alert alert-success alert-dismissible fade" role="alert" id="sign-up-auth-alert-success">
         <strong>Success!</strong> You have signed up.
       </div>
 
-
-    <!--Sign-up-alert-error-message-->
-
+      <!--Sign-Up-Alert-Error-Message-->
       <div class="alert alert-danger alert-dismissible fade" role="alert" id="sign-up-auth-alert-failure">
         <strong>Error - </strong> Username exists, or passwords do not match. Try again.
       </div>
     </div>
 
-    <!-- sign-in-form -->
-    <!-- <form action="">
-        <div class="sign-up-form">
-          <input type="email" id="input-email" class="form-control" placeholder="Email Address" required autofocus>
-          <label for="input-email">Email Address</label>
-        </div>
-        <div class="form-label-group">
-          <input type="password" id="input-password" class="form-control" placeholder="Password" required>
-          <label for="input-password">Password</label>
-        </div>
-        <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-Up">
-      </form> -->
+    <!-- Sign-In-Form -->
+  <div class="sign-in-container">
+  <div class="sign-up-form">
+    <form action="">
+        <input name="credentials[email]" class="form-control" type="email" placeholder="email">
+        <input name="credentials[password]" class="form-control" type="password" placeholder="password">
+      <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-In">
+    </form>
+  </div>
+  </div>
+
+    <!-- Sign-In-Success-->
+  <div id="sign-in-success">
+    <div class="alert alert-sign-in-success alert-dismissible fade" role="alert" id="sign-up-auth-alert-success">
+      <strong>Success!</strong> You have signed in!
+    </div>
   </div>
 </body>
 
