--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Example</title>
+  <title>E-Contacts</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -27,36 +27,78 @@
     </form>
   </div>
 
+  <!-- Sign-In-Credentials -->
+  <div class="sign-in-container">
+    <div class="sign-up-form">
+      <form action="">
+        <input name="credentials[email]" class="form-control" type="email" placeholder="email">
+        <input name="credentials[password]" class="form-control" type="password" placeholder="password">
+        <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-In">
+      </form>
+    </div>
+  </div>
 
-    <!--Sign-Up-Alert-Success-Message-->
-    <div id="sign-up-messages">
-      <div class="alert alert-success alert-dismissible fade" role="alert" id="sign-up-auth-alert-success">
-        <strong>Success!</strong> You have signed up.
-      </div>
+  <!-- Change-Password-Credentials -->
+  <div class="change-password-container">
+    <div class="change-password-form">
+      <input name="credentials[email]" class="form-control" type="email" placeholder="email">
+      <input name="credentials[password]" class="form-control" type="password" placeholder="password">
+      <input type="submit" class="btn btn-lg btn-primary btn-block" value="Change Password">
+    </div>
+  </div>
 
-      <!--Sign-Up-Alert-Error-Message-->
+  <!--Sign-Out-Credentials -->
+  <div class="sign-out-container" id="sign-out-button">
+    <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-Out">
+  </div>
+
+        <!--Alert-Messages-Containers-->
+  <!--Sign-Up-Alert-Success-Message-->
+  <div id="sign-up-alert-container">
+    <div class="alert alert-success alert-dismissible fade" role="alert" id="sign-up-auth-alert-success">
+      <strong>Success!</strong> You signed up.
+
+  <!--Sign-Up-Alert-Error-Message-->
       <div class="alert alert-danger alert-dismissible fade" role="alert" id="sign-up-auth-alert-failure">
         <strong>Error - </strong> Username exists, or passwords do not match. Try again.
       </div>
     </div>
-
-    <!-- Sign-In-Form -->
-  <div class="sign-in-container">
-  <div class="sign-up-form">
-    <form action="">
-        <input name="credentials[email]" class="form-control" type="email" placeholder="email">
-        <input name="credentials[password]" class="form-control" type="password" placeholder="password">
-      <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-In">
-    </form>
-  </div>
   </div>
 
-    <!-- Sign-In-Success-->
-  <div id="sign-in-success">
-    <div class="alert alert-sign-in-success alert-dismissible fade" role="alert" id="sign-up-auth-alert-success">
-      <strong>Success!</strong> You have signed in!
+  <!--Sign-In-Alert-Success-Message-->
+  <div id="sign-in-alert-container">
+    <div class="alert alert-sign-in-success alert-dismissible fade" role="alert" id="sign-in-auth-alert-success">
+      <strong>Success!</strong> You signed in!
+    </div>
+
+  <!--Sign-In-Alert-Error-Message-->
+  <div id="sign-in-alert ">
+    <div class="alert alert-sign-in-failure alert-dismissible fade" role="alert" id="sign-up-auth-alert-failure">
+      <strong>Error</strong> You signed in!
     </div>
   </div>
+</div>
+
+  <!--Change-password-alert-success-message-->
+  <div id="change-password-alert-container">
+    <div class="alert alert-change-password-sucess alert-dismissible fade" role="alert" id="change-password-auth-alert-success">
+      <strong>Success</strong> You signed-out!
+    </div>
+
+    <!--Change-password-alert-error-message-->
+  <div class="alert alert-change-password-failure alert-dismissible fade" role="alert" id="change-password-auth-alert-failure">
+    <strong>Password</strong> does not matter!
+  </div>
+  </div>
+
+<!--Sign-out-alert-success-message-->
+<div id="sign-out-alert-container">
+<div class="alert alert-success alert-dismissible fade" role="alert" id="sign-out-auth-alert-success">
+  <strong>Success!</strong> You signed out.
+</div>
+</div>
+
+
 </body>
 
 </html>
