--- a/index.html
+++ b/index.html
@@ -28,41 +28,40 @@
   </div>
 
   <!-- Sign-In-Credentials -->
-  <div class="sign-in-container">
-    <div class="sign-up-form">
-      <form action="">
-        <input name="credentials[email]" class="form-control" type="email" placeholder="email">
-        <input name="credentials[password]" class="form-control" type="password" placeholder="password">
-        <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-In">
-      </form>
-    </div>
+  <div id="sign-in-container">
+    <form id="sign-in-form">
+      <input name="credentials[email]" class="form-control" type="email" placeholder="email">
+      <input name="credentials[password]" class="form-control" type="password" placeholder="password">
+      <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-In">
+    </form>
   </div>
 
   <!-- Change-Password-Credentials -->
   <div class="change-password-container">
-    <div class="change-password-form">
-      <input name="credentials[email]" class="form-control" type="email" placeholder="email">
+    <form id="change-password-form">
       <input name="credentials[password]" class="form-control" type="password" placeholder="password">
-      <input type="submit" class="btn btn-lg btn-primary btn-block" value="Change Password">
-    </div>
+      <input name="credentials[password confirmation]" class="form-control" type="password" placeholder="password">
+      <input type="submit" class="btn btn-lg btn-primary btn-block" value="Change-Password">
+    </form>
   </div>
 
   <!--Sign-Out-Credentials -->
-  <div class="sign-out-container" id="sign-out-button">
-    <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-Out">
+  <form class="sign-out-container" id="sign-out-button">
+    <input  type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-Out">
+  </form>
   </div>
 
         <!--Alert-Messages-Containers-->
-  <!--Sign-Up-Alert-Success-Message-->
+  <!--Sign-Up-Alert-Success-Message-->``
   <div id="sign-up-alert-container">
-    <div class="alert alert-success alert-dismissible fade" role="alert" id="sign-up-auth-alert-success">
+    <button class="alert alert-success alert-dismissible fade" role="alert" id="sign-up-auth-alert-success">
       <strong>Success!</strong> You signed up.
+    </button>
 
   <!--Sign-Up-Alert-Error-Message-->
       <div class="alert alert-danger alert-dismissible fade" role="alert" id="sign-up-auth-alert-failure">
-        <strong>Error - </strong> Username exists, or passwords do not match. Try again.
+        <strong>Try Again</strong> Password may not match or Email exists.
       </div>
-    </div>
   </div>
 
   <!--Sign-In-Alert-Success-Message-->
@@ -70,32 +69,32 @@
     <div class="alert alert-sign-in-success alert-dismissible fade" role="alert" id="sign-in-auth-alert-success">
       <strong>Success!</strong> You signed in!
     </div>
+  </div>
 
   <!--Sign-In-Alert-Error-Message-->
-  <div id="sign-in-alert ">
+  <div id="sign-in-error-container">
     <div class="alert alert-sign-in-failure alert-dismissible fade" role="alert" id="sign-up-auth-alert-failure">
-      <strong>Error</strong> You signed in!
+      <strong>Error</strong> Check credentials.
     </div>
   </div>
-</div>
 
   <!--Change-password-alert-success-message-->
   <div id="change-password-alert-container">
     <div class="alert alert-change-password-sucess alert-dismissible fade" role="alert" id="change-password-auth-alert-success">
-      <strong>Success</strong> You signed-out!
+      <strong>Success</strong> You changed your password!
     </div>
 
     <!--Change-password-alert-error-message-->
   <div class="alert alert-change-password-failure alert-dismissible fade" role="alert" id="change-password-auth-alert-failure">
-    <strong>Password</strong> does not matter!
+    <strong>Error</strong> Passwords don't match!
   </div>
   </div>
 
 <!--Sign-out-alert-success-message-->
 <div id="sign-out-alert-container">
-<div class="alert alert-success alert-dismissible fade" role="alert" id="sign-out-auth-alert-success">
-  <strong>Success!</strong> You signed out.
-</div>
+  <div id="sign-out-button" class="alert alert-success alert-dismissible fade" role="alert" id="sign-out-auth-alert-success">
+    <strong>Success!</strong> You signed out.
+  </div>
 </div>
 
 
