--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
         <!--Alert-Messages-Containers-->
-  <!--Sign-Up-Alert-Success-Message-->``
+  <!--Sign-Up-Alert-Success-Message-->
   <div id="sign-up-alert-container">
     <button class="alert alert-success alert-dismissible fade" role="alert" id="sign-up-auth-alert-success">
       <strong>Success!</strong> You signed up.
@@ -97,6 +97,22 @@
   </div>
 </div>
 
+        <!-- Get Contacts Button -->
+<button id="get-contacts">Get Contacts</button>
+<div class="content"></div>
+<div>
+
+  <h2>Create One Contact</h2>
+      <form class="contacts" id="contacts-create">
+        <div class="form-group">
+          <input required type="text" name="contact[name]" placeholder="Contact name Here">
+          <input required type="text" name="contact[email]" placeholder="Contact Email Here">
+          <input required type="text" name="contact[industry]" placeholder="Contact Industry Here">
+        </div>
+        <button type="submit">Create Contact</button>
+      </form>
+      <div id="create-contact-message" class="user-feedback"></div>
+</div>
 
 </body>
 
