--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
         <h1>E-Contacts</h1>
   <!-- Sign-Up-Credentials -->
   <div class="sign-up-container pre-login">
@@ -131,10 +132,11 @@
 
 <div class="crud-contacts">
   <!-- Get Contacts Button -->
-  <div id="crud-container">
+  <div class="container-fluid">
+
     <h2>Get Contacts Button</h2>
     <input id="get-contacts" type="submit" class="btn btn-lg btn-primary btn-block" value="See Contacts">
-
+  </div>
       <!-- Create-Contact-Form-->
         <div class="content"></div>
           <form class="contacts" id="contacts-create">
@@ -143,7 +145,7 @@
               <input required type="text" name="contact[email]" placeholder="Contact Email Here">
               <input required type="text" name="contact[industry]" placeholder="Contact Industry Here">
             </div>
-          <input type="submit" class="btn btn-lg btn-primary btn-block" value="Create">
+          <input type="submit" class="btn btn-lg btn btn-dark btn-block" value="Create">
           </form>
 
           <div id="user-feedback" class="">
@@ -166,7 +168,7 @@
           <input type="text" name="contact[email]" placeholder="Contact Email">
           <input type="text" name="contact[industry]" placeholder="Contact Industry">
         </div>
-        <input type="submit" class="btn btn-lg btn-primary btn-block" value="Update">
+        <input type="submit" class="btn btn-lg btn-secondary btn-block" value="Update">
       </form>
 
         <div id="user-success-feedback" class="">
@@ -189,6 +191,7 @@
       <!-- end crud containers -->
     </div>
     <!-- end post login container -->
-  </div>
+
+
 </body>
 </html>
