fixed update button user-interaction

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div id="user-failure-feedback" class="">
           <div id="failure-contact-container">
             <div class="alert alert-warning fade" role="alert" id="failure-contact-message">
-              <strong>You</strong> are not allowed to update this contact.
+              <strong>You</strong> must select a contacts ID that is yours to update.
             </div>
           </div>
         </div>
